// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetricCard Snapshot Tests > matches snapshot with negative change 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm overflow-hidden"
  data-slot="card"
  data-testid="card"
>
  <div
    class="p-6"
    data-slot="card-content"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <p
          class="text-muted-foreground text-sm"
        >
          Total Revenue
        </p>
        <div
          class="mt-2 flex items-baseline gap-1"
        >
          <span
            class="text-foreground text-2xl font-medium"
          >
            $
          </span>
          <span
            class="text-foreground text-2xl font-bold"
          >
            24,500
          </span>
        </div>
      </div>
      <div
        class="bg-primary text-primary-foreground rounded-full bg-[#D97706] p-3 text-white"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dollar-sign size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="22"
          />
          <path
            d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
          />
        </svg>
      </div>
    </div>
    <div
      class="mt-4 flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trending-down text-negative h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 17h6v-6"
        />
        <path
          d="m22 17-8.5-8.5-5 5L2 7"
        />
      </svg>
      <span
        class="text-sm font-medium text-negative"
      >
        -
        5.2
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`MetricCard Snapshot Tests > matches snapshot with positive change 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm overflow-hidden"
  data-slot="card"
  data-testid="card"
>
  <div
    class="p-6"
    data-slot="card-content"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <p
          class="text-muted-foreground text-sm"
        >
          Total Revenue
        </p>
        <div
          class="mt-2 flex items-baseline gap-1"
        >
          <span
            class="text-foreground text-2xl font-medium"
          >
            $
          </span>
          <span
            class="text-foreground text-2xl font-bold"
          >
            24,500
          </span>
        </div>
      </div>
      <div
        class="bg-primary text-primary-foreground rounded-full bg-[#D97706] p-3 text-white"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dollar-sign size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="22"
          />
          <path
            d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
          />
        </svg>
      </div>
    </div>
    <div
      class="mt-4 flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trending-up text-positive h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 7h6v6"
        />
        <path
          d="m22 7-8.5 8.5-5-5L2 17"
        />
      </svg>
      <span
        class="text-sm font-medium text-positive"
      >
        +
        12.5
        %
      </span>
    </div>
  </div>
</div>
`;

exports[`MetricCard Snapshot Tests > matches snapshot without change indicator 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm overflow-hidden"
  data-slot="card"
  data-testid="card"
>
  <div
    class="p-6"
    data-slot="card-content"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <p
          class="text-muted-foreground text-sm"
        >
          Total Revenue
        </p>
        <div
          class="mt-2 flex items-baseline gap-1"
        >
          <span
            class="text-foreground text-2xl font-medium"
          >
            $
          </span>
          <span
            class="text-foreground text-2xl font-bold"
          >
            24,500
          </span>
        </div>
      </div>
      <div
        class="bg-primary text-primary-foreground rounded-full bg-[#D97706] p-3 text-white"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dollar-sign size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="22"
          />
          <path
            d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`MetricCard Snapshot Tests > matches snapshot without prefix 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm overflow-hidden"
  data-slot="card"
  data-testid="card"
>
  <div
    class="p-6"
    data-slot="card-content"
  >
    <div
      class="flex items-center justify-between"
    >
      <div>
        <p
          class="text-muted-foreground text-sm"
        >
          Total Revenue
        </p>
        <div
          class="mt-2 flex items-baseline gap-1"
        >
          <span
            class="text-foreground text-2xl font-bold"
          >
            24,500
          </span>
        </div>
      </div>
      <div
        class="bg-primary text-primary-foreground rounded-full bg-[#D97706] p-3 text-white"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-dollar-sign size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="12"
            x2="12"
            y1="2"
            y2="22"
          />
          <path
            d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
          />
        </svg>
      </div>
    </div>
    <div
      class="mt-4 flex items-center gap-1"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trending-up text-positive h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 7h6v6"
        />
        <path
          d="m22 7-8.5 8.5-5-5L2 17"
        />
      </svg>
      <span
        class="text-sm font-medium text-positive"
      >
        +
        12.5
        %
      </span>
    </div>
  </div>
</div>
`;
